<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_principal"
    tools:context="co.edu.poli.gamification.poliplaygami.Secuencia.Registro">

    <ImageView
        android:id="@+id/titulo_poli_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/titulo_registro_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_poli_azul" />

    <ImageView
        android:id="@+id/titulo_registro_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/header_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_poli_registro"
        app:srcCompat="@drawable/titulo_registro" />

    <android.support.constraint.Guideline
        android:id="@+id/header_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <EditText
        android:id="@+id/email_registro"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textfield_data"
        android:ems="10"
        android:hint="@string/ingreso_email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:paddingEnd="1dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/usuario_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header_registro" />

    <EditText
        android:id="@+id/usuario_registro"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textfield_data"
        android:ems="10"
        android:hint="@string/ingreso_usuario"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:paddingEnd="1dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/codigo_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_registro" />

    <EditText
        android:id="@+id/codigo_registro"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textfield_data"
        android:ems="10"
        android:hint="@string/ingreso_codigo"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:paddingEnd="1dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/clave_uno_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario_registro" />

    <EditText
        android:id="@+id/clave_uno_registro"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textfield_data"
        android:ems="10"
        android:hint="@string/ingreso_contrasena"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:paddingEnd="1dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/clave_dos_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codigo_registro" />

    <EditText
        android:id="@+id/clave_dos_registro"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textfield_data"
        android:ems="10"
        android:hint="@string/ingreso_contrasena_conf"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:paddingEnd="1dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/footer_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clave_uno_registro" />

    <android.support.constraint.Guideline
        android:id="@+id/footer_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />

    <Button
        android:id="@+id/btn_registro_registro"
        android:layout_width="213dp"
        android:layout_height="42dp"
        android:background="@drawable/rectangulo_boton_oscuro"
        android:text="@string/btn_registro"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/footer_registro" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
